Fix gradient circles and use blurred, primary variant

--- a/frontend/src/components/svg/GradientCircles/GradientCircles.module.scss
+++ b/frontend/src/components/svg/GradientCircles/GradientCircles.module.scss
@@ -27,10 +27,12 @@
 
 .innerWrapper {
   overflow: hidden;
+  z-index: var(--z-index);
 }
 
 .blur {
   overflow: hidden;
+  z-index: calc(var(--z-index) + 1);
 
   div {
     backdrop-filter: blur(var(--blur));
